--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NEWSROOM - Free Bootstrap Magazine Template</title>
+    <title>Desi Chopal</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -31,11 +31,10 @@
         <div class="row align-items-center bg-light px-lg-5">
             <div class="col-12 col-md-8">
                 <div class="d-flex justify-content-between">
-                    <div class="bg-primary text-white text-center py-2" style="width: 100px;">Tranding</div>
+                    <div class="bg-primary text-white text-center py-2" style="width: 100px;">Trending</div>
                     <div class="owl-carousel owl-carousel-1 tranding-carousel position-relative d-inline-flex align-items-center ml-3" style="width: calc(100% - 100px); padding-left: 90px;">
-                        <div class="text-truncate"><a class="text-secondary" href="">Labore sit justo amet eos sed, et sanctus dolor diam eos</a></div>
-                        <div class="text-truncate"><a class="text-secondary" href="">Gubergren elitr amet eirmod et lorem diam elitr, ut est erat Gubergren elitr amet eirmod et lorem diam elitr, ut est erat</a></div>
-                    </div>
+                        <div class="text-truncate"><a class="text-secondary" href="">Found all your news on one spot</a></div>
+                        <div class="text-truncate"><a class="text-secondary" href="">Follow our social media accounts for more updates</div>
                 </div>
             </div>
             <div class="col-md-4 text-right d-none d-md-block">
@@ -45,7 +44,7 @@
         <div class="row align-items-center py-2 px-lg-5">
             <div class="col-lg-4">
                 <a href="" class="navbar-brand d-none d-lg-block">
-                    <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">News</span>Room</h1>
+                    <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">Desi</span>Chopal</h1>
                 </a>
             </div>
             <div class="col-lg-8 text-center text-lg-right">
@@ -98,21 +97,22 @@
         <div class="container">
             <div class="owl-carousel owl-carousel-2 carousel-item-3 position-relative">
                 <div class="d-flex">
-                    <img src="img/news-100x100-1.jpg" style="width: 80px; height: 80px; object-fit: cover;">
+                    <img src="https://tse2.mm.bing.net/th?id=OIP.lHm73Bf02jkHrb9UXkoSLAHaEK&pid=Api&P=0&h=180" style="width: 80px; height: 80px; object-fit: cover;">
                     <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                        <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
+                        <a class="text-secondary font-weight-semi-bold" href="">वीरता तो सम्मान की गाथा : राजपूतो का इतिहास </a>
                     </div>
                 </div>
                 <div class="d-flex">
-                    <img src="img/news-100x100-2.jpg" style="width: 80px; height: 80px; object-fit: cover;">
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.FLsICiVuAQl8qxq4Op5nBwHaE8&pid=Api&P=0&h=180" style="width: 80px; height: 80px; object-fit: cover;">
                     <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                        <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
+                        <a class="text-secondary font-weight-semi-bold" href="">क्या आप भी तेजी से वजन घटाने के बारे में सोच रहे हैं?</a>
                     </div>
                 </div>
                 <div class="d-flex">
-                    <img src="img/news-100x100-3.jpg" style="width: 80px; height: 80px; object-fit: cover;">
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.hP-yQBHQXqmZYxjCzDnrLwHaEK&pid=Api&P=0&h=180" style="width: 80px; height: 80px; object-fit: cover;">
                     <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                        <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
+                        <a class="text-secondary font-weight-semi-bold" href="">टाटा कर्व ईवी: भारत की नई इलेक्ट्रिक कार
+</a>
                     </div>
                 </div>
                 <div class="d-flex">
